# Paper-Refiner-Tool

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  prompts.yaml  pyproject.toml  requirements.txt
docs/: 小白配置指南.md
src/paper_refiner/: __init__.py  apply.py  cli.py  config_loader.py  llm.py  paths.py  prompt_template.py  scan.py  xmlutil.py
src/paper_refiner/web/: __init__.py  app.py  run.py  sessions.py
src/paper_refiner/web/static/: app.js  style.css
src/paper_refiner/web/templates/: index.html
